2001-04-28  James Henstridge  <james@daa.com.au>

	* examples/pygtk-demo/demos/toolbar.py (main): remove buttons that
	called set_space_size method.

	* gtk/__init__.py: remove __all__ definition.  It causes problems
	with python 2.1.

	* gtk/gtk.override: updated GtkColorSelection method overrides
	(ignore): remove gtk_entry_new from ignore list, as other entry
	constructor is gone.

	* gtk/gtk.defs: updates to make it work with current gtk+

2001-04-21  James Henstridge  <james@daa.com.au>

	* codegen/docgen.py, codegen/docextract.py: start of automatic
	documentation generator.

2001-04-08  James Henstridge  <james@daa.com.au>

	* gtk/gtk.override: same here.

	* gtk/gtk-types.c (_pygtk_register_boxed_types): more fixups

	* gtk/gtkobject-support.c: lots of similar fixups.

	* codegen/argtypes.py (_enum_name): gdk type codes now seem to be
	named GDK_TYPE_... and not GTK_TYPE_GDK_...

2001-04-07  James Henstridge  <james@daa.com.au>

	* gtk/gtk.defs: lots of defs file updates.

2001-04-06  James Henstridge  <james@daa.com.au>

	* codegen/h2def.py: add --onlyobjdefs flag to script.

2001-03-30  James Henstridge  <james@daa.com.au>

	* examples/pygtk-demo/demos/toolbar.py (main): toolbar demo.

	* examples/pygtk-demo/demos/buttonbox.py (main): add button box
	demo.

	* examples/pygtk-demo: moved rewritten testgtk demo here, and make
	changes to account for renamings in gtk.

	* gobjectmodule.c (pygobject_set_property): initialise the GValue
	to { 0, }, so set_property actually works.
	(pygobject_get_property): same here.

	* gtk/gtk.defs: updated enum/flag defs.

	* gtk/gdk.defs: updated enum/flag defs.

	* examples/gobject/signal.py (D.do_my_signal): add small example
	of overriding class closure for a signal introduced from python
	code.

	* codegen/h2def.py: add --onlyenums flag to only output enum defs.

2001-03-27  James Henstridge  <james@daa.com.au>

	* examples/gobject/signal.py: simple example program that adds a