@@ -1,5 +1,11 @@
 2001-04-28  James Henstridge  <james@daa.com.au>
 
+	* Makefile.am, pygtk/Makefile.am: limit the symbols exported by
+	the various modules to just their module init function.
+
+	* gtk/Makefile.am (_gtkmodule_la_LDFLAGS): only export the
+	init_gtk symbol.
+
 	* examples/pygtk-demo/demos/toolbar.py (main): remove buttons that
 	called set_space_size method.
 
